# copilot

backend/: .gitignore  Makefile  entrypoint.sh  pyproject.toml
backend/deploy/: Dockerfile  docker-compose.yml
backend/src/: database_config.py  settings.py
backend/src/db/migrations/: 000001_create_user_table.down.sql  000001_create_user_table.up.sql
